fixed: media 576 overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -2124,6 +2124,7 @@ template {
     min-width: 320px;
     max-width: 100vw;
     padding: 0 20px;
+    overflow-x: hidden;
   }
   .navbar-top {
     padding: 28px 0;
