--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -338,7 +338,7 @@
     min-width: 320px
     max-width: 100vw
     padding: 0 20px
-    // overflow-x: hidden
+    overflow-x: hidden
   .navbar
     &--mobile
       &--fixed
